syntax = "proto3";

option java_multiple_files = true;
option java_package = "smartcity.airquality";
option java_outer_classname = "AirQualityServiceProto";

package airquality;

service AirQualityService {
  rpc MonitorAirQuality (stream AQRequest) returns (stream AQResponse);
}

message AQRequest {
  string zone_id = 1;
}

message AQResponse {
  int32 aqi = 1;
  string status = 2;
}
