syntax = "proto3";

option java_multiple_files = true;
option java_package = "smartcity.transport";
option java_outer_classname = "PublicTransportServiceProto";

package transport;

service PublicTransportService {
  rpc SendCrowdReports (stream CrowdReport) returns (CrowdSummary);
}

message CrowdReport {
  string stop_num = 1;
  int32 count = 2;
}

message CrowdSummary {
  string overall_status = 1;
